# halbestunde-python-client

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
examples/: example_usage.py
halbestunde_python_client/: client.py
tests/: test_client.py
